tests/cases/error/error-undefined-var.out
error: undefined value
 --> tests/cases/error/error-undefined-var.rapt:1:9
  |
1 | # line 1
2 | $ for x in missing
  | ^^^^^^^^^^^^^^^^^^ undefined value (in tests/cases/error/error-undefined-var.rapt:2)
3 | RUN echo {{x}}
4 | $ endfor
5 | # line 3
  |
